Sorry, fell behind. Had some personal issues to deal with. Fixed up some CSS styling issues, merged the login component into the landing page.

--- a/pair-me-client/src/App.css
+++ b/pair-me-client/src/App.css
@@ -146,7 +146,10 @@ table {
 /*** BEGIN BODY APP ***/
 /****************************************************************************************************/
 .App {
-  width: 100%;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .app-container {
@@ -166,7 +169,7 @@ table {
 /****************************************************************************************************/
 
 .nav-container {
-  width: 100%;
+  width: 90%;
   padding: 20px 0px;
   text-decoration: none;
   background: #3d3d3d;
@@ -252,7 +255,7 @@ table {
 .register-container form {
   display: flex;
   flex-flow: column nowrap;
-  max-width: 100%;
+  width: 100%;
   align-items: center;
 }
 
@@ -269,7 +272,7 @@ table {
 
 .register-container form button {
   padding: 10px;
-  width: 10%;
+  width: 30%;
   margin: 5px;
   border: 1px solid gray;
   border-radius: 10px;
@@ -291,13 +294,14 @@ table {
   justify-content: space-between;
 }
 
-.welcome-left {
+.welcome-right {
   border: 1px solid red;
   display: flex;
   flex-direction: column;
+  width: 45%;
 }
 
-.welcome-left h1 {
+.welcome-right h1 {
   font-size: 3rem;
 }
 
